--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,7 @@ header h1 {
   color: white;
   font-size: 2.5rem;
   font-weight: bold;
+  height: 3.5rem;
 }
 
 .result > p {
@@ -83,6 +84,21 @@ header h1 {
 .choice > img {
   height: 100px;
   width: auto;
+}
+
+.green-glow {
+  border: 4px solid #4dcc7d;
+  box-shadow: 0 0 10px #31b43a;
+}
+
+.red-glow {
+  border: 4px solid #fc121b;
+  box-shadow: 0 0 10px #d01115;
+}
+
+.gray-glow {
+  border: 4px solid #464647;
+  box-shadow: 0 0 10px #25292b;
 }
 
 .action-message {
