--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,10 @@ header h1 {
   color: white;
   font-size: 2.5rem;
   font-weight: bold;
-  height: 3.5rem;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .result > p {
@@ -64,7 +67,7 @@ header h1 {
 
 .choices {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 10px;
 }
 .choice {
   display: inline-block;
@@ -107,4 +110,47 @@ header h1 {
   font-weight: bold;
   font-size: 20px;
   margin-top: 20px;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (max-width: 576px) {
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (max-width: 768px) {
+  .result {
+    font-size: 2rem;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .choices {
+    margin-top: 10px;
+  }
+
+  .choice {
+    padding: 10px;
+  }
+
+  .choice > img {
+    height: 50px;
+  }
+
+  .action-message {
+    margin-top: 40px;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (max-width: 992px) {
+}
+
+/* X-Large devices (large desktops, 1200px and up) */
+@media (max-width: 1200px) {
+}
+
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (max-width: 1400px) {
 }
