--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,41 @@
 @import url("https://fonts.googleapis.com/css2?family=Asap:wght@400;500;700&display=swap");
 
+/*
+=============== 
+Variables
+===============
+*/
+
+:root {
+  /* dark shades of primary color*/
+  --primary-color-dark: #24272e;
+  --btn-ligth: #cf9e7d;
+  --btn-light-hover: #f7ddc4;
+  --red-dark: #bb2525;
+  --red-light: #e2584d;
+  --white: #fff;
+  --border-3: 3px solid white;
+  --border-4: 4px solid white;
+  --radius: 4px;
+  --transition: all 0.3s ease;
+  --shadow: #e66b6b;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  background-color: #24272e;
+  background-color: var(--primary-color-dark);
   font-family: Asap, sans-serif;
+}
+
+ul {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
 }
 
 header {
@@ -16,16 +44,16 @@ header {
 }
 
 header h1 {
-  color: #24272e;
+  color: var(--primary-color-dark);
   text-align: center;
 }
 
 .score-board {
   margin: 20px auto;
-  border: 3px solid white;
-  border-radius: 0.25rem;
+  border: var(--border-3);
+  border-radius: var(--radius);
   width: 200px;
-  color: white;
+  color: var(--white);
   font-size: 2.875rem;
   text-align: center;
   padding: 15px 20px;
@@ -33,8 +61,8 @@ header h1 {
 }
 
 .badge {
-  background-color: #e2584d;
-  color: white;
+  background-color: var(--red-light);
+  color: var(--white);
   font-size: 1.25rem;
   padding: 2px 10px;
 }
@@ -52,7 +80,7 @@ header h1 {
 }
 
 .result {
-  color: white;
+  color: var(--white);
   font-size: 2.5rem;
   font-weight: bold;
   height: 100px;
@@ -71,17 +99,17 @@ header h1 {
 }
 .choice {
   display: inline-block;
-  border: 4px solid white;
+  border: var(--border-4);
   border-radius: 50%;
   padding: 20px;
   margin: 0 15px;
-  background-color: #cf9e7d;
-  transition: all 0.3s ease;
+  background-color: var(--btn-ligth);
+  transition: var(--transition);
 }
 
 .choice:hover {
   cursor: pointer;
-  background-color: #f7ddc4;
+  background-color: var(--btn-light-hover);
 }
 
 .choice > img {
@@ -106,7 +134,7 @@ header h1 {
 
 .action-message {
   text-align: center;
-  color: white;
+  color: var(--white);
   font-weight: bold;
   font-size: 20px;
   margin-top: 20px;
@@ -122,18 +150,141 @@ header h1 {
 .reset-btn {
   width: 100px;
   height: 40px;
-  background: #eaf6ff;
+  background: var(--btn-ligth);
   padding: 0.25rem 0.5rem;
   text-transform: capitalize;
-  border-radius: 0.25rem;
-  transition: all 0.3s linear;
-  border-color: #49a6e8;
+  border-radius: var(--radius);
+  transition: var(--transition);
+  border-color: var(--white);
   cursor: pointer;
   font-size: 1.2rem;
 }
 .reset-btn:hover {
-  background: #49a6e8;
+  background: var(--btn-light-hover);
 }
+
+.score-board,
+.result,
+.choices,
+.action-message,
+.reset-container,
+.sidebar-toggle {
+  opacity: 0;
+  transition: opacity 4s;
+}
+
+/*
+=============== 
+Sidebar
+===============
+*/
+.sidebar-toggle {
+  position: fixed;
+  top: 1rem;
+  right: 2rem;
+  font-size: 2rem;
+  background: transparent;
+  border-color: transparent;
+  color: var(--primary-color-dark);
+  transition: var(--transition);
+  cursor: pointer;
+}
+
+.sidebar-toggle:hover {
+  color: var(--btn-ligth);
+  transform: scale(1.2);
+}
+
+.sidebar-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 1.5rem;
+}
+.close-btn {
+  font-size: 1.75rem;
+  background: transparent;
+  border-color: transparent;
+  transition: var(--transition);
+  cursor: pointer;
+  color: var(--primary-color-dark);
+}
+.close-btn:hover {
+  color: var(--btn-ligth);
+  transform: rotate(360deg);
+}
+.logo {
+  justify-self: center;
+  height: 40px;
+}
+
+.social-icons {
+  justify-self: center;
+  display: flex;
+  padding-bottom: 2rem;
+}
+.social-icons a {
+  font-size: 1.5rem;
+  margin: 0 0.5rem;
+  color: var(--primary-color-dark);
+  transition: var(--transition);
+}
+.social-icons a:hover {
+  color: var(--btn-light-hover);
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--white);
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  row-gap: 1rem;
+  box-shadow: var(--shadow);
+  transition: var(--transition);
+  transform: translate(-100%);
+}
+.show-sidebar {
+  transform: translate(0);
+}
+
+/* Loader */
+.loader-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: #ff3d00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/*
+=============== 
+End Sidebar
+===============
+*/
 
 /* Small devices (landscape phones, 576px and up) */
 @media (max-width: 576px) {
@@ -164,6 +315,10 @@ header h1 {
   .action-message {
     margin-top: 40px;
   }
+
+  .sidebar-toggle {
+    right: 0.5rem;
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
@@ -176,4 +331,10 @@ header h1 {
 
 /* XX-Large devices (larger desktops, 1400px and up) */
 @media (max-width: 1400px) {
+}
+
+@media screen and (min-width: 768px) {
+  .sidebar {
+    width: 400px;
+  }
 }
